--- a/scratch.html
+++ b/scratch.html
@@ -12,7 +12,7 @@
     <h1 ID="Top">Peak Life Experiences</h1>
 </div>
 <nav> 
-    <a href="/index.html">Resume</a>
+    <a href="./index.html">Resume</a>
     <a href="/scratch.html">Peak Life Experiences</a>
 </nav>
 <div class="mainbody">
