--- a/scratch.html
+++ b/scratch.html
@@ -13,7 +13,7 @@
 </div>
 <nav> 
     <a href="./index.html">Resume</a>
-    <a href="/scratch.html">Peak Life Experiences</a>
+    <a href="./scratch.html">Peak Life Experiences</a>
 </nav>
 <div class="mainbody">
     <ol>
